fix navbar z-index

--- a/web/src/components/Navbar/Navbar.module.css
+++ b/web/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   background-color: var(--background-secondary);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   max-height: 100vh;
 }
